# CIAS

./: .gitignore  CMakeLists.txt  CONVERTER.md  README.md  __init__.py  pyproject.toml
examples/: convert_example.py
schemas/: CIAS.json
src/: CiasCircuitConverter.cpp  CiasCircuitConverter.hpp  CiasConverter.cpp  CiasConverter.hpp  bindings.cpp
tests/: test_cias_convert.cpp  test_conversion.py
